--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "preview": "vite preview"
     },
     "dependencies": {
+        "@google/generative-ai": "^0.24.1",
         "jspdf": "^2.5.2",
         "mammoth": "^1.8.0",
         "pdfjs-dist": "^4.9.155",
